--- a/index.html
+++ b/index.html
@@ -651,5 +651,19 @@
 		<script type="text/javascript" src="js-plugin/owl.carousel/owl-carousel/owl.carousel.min-MODIFIED.js"></script>
 		<!-- Custom  -->
 		<script type="text/javascript" src="js/custom.js"></script>
+
+		<!-- Firebase Integration --> 
+		<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+		<script>
+		  // Initialize Firebase
+		  var config = {
+		    apiKey: "AIzaSyD3J6cbz7EQ-3SkpgJIrmmoIIGdxcXG5DI",
+		    authDomain: "project-4646354492155913266.firebaseapp.com",
+		    databaseURL: "https://project-4646354492155913266.firebaseio.com",
+		    storageBucket: "",
+		  };
+		  firebase.initializeApp(config);
+		</script>
+		<!-- firebase --> 
 	</body>
 	</html>
