--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		================================================== -->
 		<meta charset="utf-8">
 		<title>RB Engineering</title>
-		<meta name="description" content="RB Engineering is a Chicago-land engineering company for industrial manufacturing equipement.">
+		<meta name="description" content="RB Engineering is a Chicagoland engineering company for industrial manufacturing equipement.">
 		<meta name="author" content="Robert Brysiewicz">
 		<!-- Mobile Specific Metas
 		================================================== -->
@@ -128,31 +128,29 @@
 					<div class="row">
 						<div class="col-xs-12 headingCenter">
 							<h1>About us</h1>
-							<h2 class="subTitle">a chicago-land engineering company</h2>
+							<h2 class="subTitle">a chicagoland engineering company</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4"> <img src="images/rb-profile-pic.png" alt="services" class="img-responsive"> </div>
 						<div class="col-sm-4">
-							<h2>This is a title</h2>
+							<h2>Robert Brysiewicz</h2>
 
-							<p>Over 35 years experience serving Chicagoland's manufacturing community.
-								Engineering design support and premier sourcing solutions for all your manufacturing needs.
+							<p>Robert Brysiewicz started RB Engineering in 1981.
 							</p>
 
-							<p>RB Engineering has been helping manufacturers source their mechanical solutions for over 35 years.
-								Our premier vendor partnerships and our engineering design support set us apart.
+							<p>Originally a bearings salesman, Robert quickly saw a need in his customers for more than just bearings. 
 							</p>
 
 						</div>
 
 						<div class="col-sm-4">
-							<h2>Another title here</h2>
+							<h2>RB Engineering</h2>
 							<p> Over 35 years experience serving Chicagoland's manufacturing community.
 								Engineering design support and premier sourcing solutions for all your manufacturing needs. </p>
-							<h3>a third title</h3>
-							<p> RB Engineering has been helping manufacturers source their mechanical solutions for over 35 years.
+							<h3></h3>
+							<p> RB Engineering has been helping manufacturers source their mechanical solutions since 1981.
 								Our premier vendor partnerships and our engineering design support set us apart. </p>
 						</div>
 					</div>
