tweaks per meeting

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 		<!-- <link rel="stylesheet" href="http://basehold.it/24"> -->
 		<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 		<script src="js/modernizr-2.6.1.min.js"></script>
+		<!-- Google Fonts -->
+		<link href='https://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
 		<!-- Favicons
 		================================================== -->
 		<link rel="shortcut icon" href="images/rb-favicon.ico">
@@ -73,7 +75,7 @@
 								<span class="icon-bar"></span>
 							</button>
 
-							<a class="navbar-brand" href="../index.html"><img class="nav-logo" src="images/rb-logo-1.png" alt="RB Engineering"/></a>
+							<a class="navbar-brand" href="../index.html"><img class="nav-logo" src="images/rb-nav-4.png" alt="RB Engineering"/></a>
 						</div>
 						
 						<div class="collapse navbar-collapse navbar-ex1-collapse" id="scrollTarget">
@@ -101,17 +103,26 @@
 					<div id="fullScreenWrapper">
 						<div class="centered-content">
 							<div id="logoBig">
-								<img class="img-responsive" src="images/rb-logo-1.png" alt="RB Engineering Logo" />
+								<img class="img-responsive" src="images/rb-logo-3.png" alt="RB Engineering Logo" />
+							</div>
+							<div id="single-source">
+							<h2>Your single source for..</h2>
 							</div>
 							<div class="owl-carousel nekoDataOwl " data-neko_items="1" data-neko_singleitem="true" data-neko_pagination="true" data-neko_transitionstyle="fadeUp"  data-neko_autoplay="true">
 								<div class="item">
-									<h1>Machining</h1>
+									<h1>Custom Machining</h1>
 								</div>
 								<div class="item">
-									<h1>Forming</h1>
+									<h1>Custom Forming</h1>
 								</div>
 								<div class="item">
-									<h1>Assembling</h1>
+									<h1>Custom Assembling</h1>
+								</div>
+								<div class="item">
+									<h1>Custom Design</h1>
+								</div>
+								<div class="item">
+									<h1>Custom Molding</h1>
 								</div>
 							</div> 
 
@@ -140,7 +151,7 @@
 							<p>Robert Brysiewicz started RB Engineering in 1981.
 							</p>
 
-							<p>Originally a bearings salesman, Robert quickly saw a need in his customers for more than just bearings. 
+							<p>Originally a bearings and power transmissions sales engineer, Robert quickly saw a need in his customers for custom manufactured parts. 
 							</p>
 
 						</div>
@@ -164,15 +175,16 @@
 					<div class="row">
 						<div class="col-xs-12 headingCenter">
 							<h1>Our services</h1>
-							<h2 class="subTitle">What we do</h2>
+							<h2 class="subTitle">100% custom</h2>
 						</div>
 					</div>
+
 					<div class="row">
 						<div class="col-md-3 col-sm-6 mb-sm mb-xs">
 							<article class="boxFeature-2">
 								<i class="icon-glyph-142 iconBig"></i>
 								<h2>Machining</h2>
-								<p>largest machining capabilities of 48in x 60in.</p>
+								<p>Max Capacity: 48" x 60" x 24" </p>
 							</article>
 						</div>
 
@@ -180,11 +192,50 @@
 							<article class="boxFeature-2">
 								<i class="icon-glyph-72 iconBig"></i>
 								<h2>Forming</h2>
-								<p>largest forming capabilities of 12ft.</p>
+								<p>Max Capacity: 144" </p>
 							</article>
 						</div>
 
 						<div class="col-md-3 col-sm-6 mb-xs">
+							<article class="boxFeature-2">
+								<i class="icon-glyph-118 iconBig"></i>
+								<h2>Assembling</h2>
+								<p>Max Capacity: 120' x 60' </p>
+							</article>
+						</div>
+
+						<div class="col-md-3 col-sm-6 mb-sm mb-xs">
+							<article class="boxFeature-2">
+								<i class="icon-glyph-72 iconBig"></i>
+								<h2>Molding</h2>
+								<p>Max Capacity: 48" x 48" </p>
+							</article>
+						</div>
+
+					</div>
+
+
+					<div class="row">
+
+						<div class="col-md-6 col-sm-6">
+							<article class="boxFeature-2">
+								<i class="icon-glyph-220 iconBig"></i>
+								<h2>Designing</h2>
+								<p>with the ability to produce CAD files, CAM files and marketing materials</p>
+							</article>
+						</div>	
+
+						<div class="col-md-6 col-sm-6 mb-sm mb-xs">
+							<article class="boxFeature-2">
+								<i class="icon-glyph-142 iconBig"></i>
+								<h2>3D Scanning</h2>
+								<p>with the ability for CAD files and marketing materials</p>
+							</article>
+						</div>
+
+
+
+<!-- 						<div class="col-md-3 col-sm-6 mb-xs">
 							<article class="boxFeature-2">
 								<i class="icon-glyph-118 iconBig"></i>
 								<h2>Assembling</h2>
@@ -198,9 +249,18 @@
 								<h2>Custom Designing</h2>
 								<p>with the ability to product CAM files and marketing materials.</p>
 							</article>
-						</div>	
-
+						</div>	 -->
 					</div>
+
+					<br>
+					<br>
+					<br>
+					<div class="row">
+						<div class="col-xs-12 headingCenter">
+							<h2 class="subTitle">Disclaimer: We are prepared to grow as needed to accommodate our customers needs.</h2>
+						</div>
+					</div>
+
 				</div>
 			</section>
 			<!-- /services -->
@@ -236,6 +296,7 @@
 									<li><a href=""  class="btn btn-sm" data-filter=".machining" >Machining</a></li>
 									<li><a href=""  class="btn btn-sm" data-filter=".forming">Forming</a></li>
 									<li><a href="" class="btn btn-sm" data-filter=".assembling">Assembling</a></li>
+									<li><a href="" class="btn btn-sm" data-filter=".scanning">3D Scanning</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -381,6 +442,21 @@
 						</figure>
 					</article>
 
+					<article class="isotopeItem scanning">
+						<figure class="imgWrapper">
+							<img alt="" src="images/portfolio/rb-promo-10-sm.png" class="img-responsive">
+							<figcaption class="mediaHover">
+
+								<div class="iconLinks"> 
+									<a href="images/portfolio/rb-promo-10.png" class="image-link" title="Full width image">
+										<i class="icon-glyph-16 iconRounded"></i>
+									</a> 
+								</div>
+								<h3>3D Scanner</h3>
+							</figcaption>
+						</figure>
+					</article>
+
 					
 				</div>
 			</section>
@@ -391,7 +467,6 @@
 				<div class="maskParent">
 					<div class="maskOverlay opacity-6"></div>
 					<div class="parallaxText">
-						<i class="icon-glyph-142 iconBig"></i>
 						<blockquote class="mt15">
 							<p>
 								Thank You<br/>
@@ -580,12 +655,12 @@
 						<div class="row">
 							<div class="col-sm-4">
 								<div class="footerWidget">
-									<p><a href="../index.html" title="RB Engineering"><img src="images/rb-logo-1.png" alt="RB Engineering" id="footerLogo"></a></p>
+									<p><a href="../index.html" title="RB Engineering"><img src="images/rb-logo-3.png" alt="RB Engineering" id="footerLogo"></a></p>
 								</div>
 							</div>
 
 
-							<div class="col-sm-4">
+							<div class="col-sm-8">
 								<div class="footerWidget">
 									<h3>RB Engineering</h3>
 									<address>
