--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 							</div>                        
 							<div class="col-md-8 col-md-offset-4">
 								<div class="result"></div>
-								<button name="submit" type="submit" class="btn btn-lg" id="submit" value="Send">Submit</button>
+								<button name="submit" type="submit" class="btn btn-lg" id="submit" value="Send">Submit</button><h4 class="formspree-success">Success! We've sent your message.</h4>
 							</div>
 						</form>
 
@@ -765,6 +765,8 @@
 		<script type="text/javascript" src="js-plugin/owl.carousel/owl-carousel/owl.carousel.min-MODIFIED.js"></script>
 		<!-- Custom  -->
 		<script type="text/javascript" src="js/custom.js"></script>
+		<script type="text/javascript" src="js/tb.js"></script>
+
 
 		<!-- Firebase Integration --> 
 		<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
