--- a/portfolio-scanning.html
+++ b/portfolio-scanning.html
@@ -62,8 +62,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10">
-                        <h1>Full width image project</h1>
-                        <p class="date">In Women / November 24</p>
+                        <h1>FARO 3D Laser Scanner</h1>
+                        <p class="date">In 3D Scanning</p>
                     </div>
                     <div class="col-md-2">
                         <a href="index.html#works" class="btn backButton"><i class="icon-glyph-41"></i>Back</a>
@@ -80,43 +80,37 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 mb30">
-                            <img src="images/portfolio/img-fullwidth-1.jpg" alt="snowflake premium website template" class="img-responsive"/>
+                            <img src="images/portfolio/rb-promo-10-2.png" alt="3D Scanning Overview" class="img-responsive"/>
                         </div>
                         <div class="col-md-6 mb30">
-                            <img alt="" src="images/portfolio/vign2.jpg" class="img-responsive">
+                            <img alt="" src="images/portfolio/rb-promo-10-sm.png" class="img-responsive">
                         </div>
                         <div class="col-md-6 mb30">
-                            <img alt="" src="images/portfolio/vign4.jpg" class="img-responsive">
-                        </div>
-                        <div class="col-md-12">
-                            <img src="images/portfolio/img-fullwidth-2.jpg" alt="snowflake premium website template" class="img-responsive"/>
+                            <h2>Overview</h2>
+                            <p>The FARO 3D Laser Scanner is the best in non-contact laser scanning technology. Designed to be ultra-portable and lightweight, the FARO 3D Laser Scanner can go virtually anywhere. </p>
+                            <hr>
+                            <br>
+                            <h2>Capabilities</h2>
+                            <p>Capable of scanning any 3D surface, the FARO 3D Laser Scanner measures up to 976,000 data points every second. With the ability to scan a building’s internal or external structure, the applications for such technology are endless. A scan can be used to create highly accurate 3D CAD models, which then can be leveraged in saving time and money.</p>
+                            <hr>
+                            <br>
+                            <h2>Suggested Applications</h2>
+                            <ul>
+                                <li>3D Virtual Tours</li>
+                                <li>Visualizing New Equipment Integration</li>
+                                <li>Visualizing Moving Existing Equipment</li>
+                                <li>Installation Planning</li>
+                                <li>2D Floor Plans</li>
+                                <li>Designing Custom Equipment</li>
+                                <li>Production-line Efficiency Testing</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- / images -->
 
-            <!-- infos -->
-            <section>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h2>Another successful project </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vulputate nunc ut tellus sollicitudin placerat. Sed ac consectetur leo. Pellentesque habitant morbi tristique senectus et netus...</p>
-                        </div>
-                        <div class="col-md-4">
-                            <h2>Client</h2>
-                            <p>Big International Company</p>
-                            <h2>Technology</h2>
-                            <p>HTML5, CSS3, Bootstrap</p>
-                        </div>
-                        <div class="col-md-4">
-                            <div id="shareme" data-url="http://little-neko.com" data-text="Check out CLEARFIX, a great Bootstrap 3 One page template"> </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- / infos -->
+
 
             <!-- call to action -->
             <section class="slice">
@@ -126,12 +120,12 @@
                             <div class="ctaBox ctaBox2Cols">
                                 <div class="ctaBoxText">
                                     <h1>
-                                        Get clearfix now and start your website today!
+                                        Email us today!
                                     </h1>
                                 </div>
                                 <div class="ctaBoxBtn">
-                                    <a title="" href="#" target="blank" class="btn btn-lg">
-                                        <i class="icon-glyph-33"></i> purchase now
+                                    <a title="" href="mailto:robertbrysiewicz@rbeng.com" target="blank" class="btn btn-lg">
+                                        <i class="icon-glyph-33"></i> email now
                                     </a>
                                 </div>
                             </div>
@@ -144,17 +138,61 @@
         <!-- /project -->
 
         <!-- footer -->
-        <footer id="footerRights">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <p>Copyright © 2015 <a href="http://www.little-neko.com" target="blank">Little NEKO</a> / All rights reserved.</p>
-                    </div>
+            <footer>
+                <section id="mainFooter">
+                    <div class="container" id="footer">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="footerWidget">
+                                    <p><a href="../index.html" title="RB Engineering"><img src="images/rb-logo-3.png" alt="RB Engineering" id="footerLogo"></a></p>
+                                </div>
+                            </div>
 
+
+                            <div class="col-sm-8">
+                                <div class="footerWidget">
+                                    <h3>RB Engineering</h3>
+                                    <address>
+                                        <p>
+                                            956 S. Bartlett Road - Suite 261<br>
+                                            Bartlett, IL 60103 USA <br>
+                                            630.965.7236 <br>
+                                            <a href="mailto:robertbrysiewicz@rbeng.com">robertbrysiewicz@rbeng.com</a>
+                                        </p>
+                                    </address>
+                                </div>
+                            </div>
+
+                            <!-- <div class="col-sm-4">
+                                <div class="footerWidget">
+                                    <h3>We're social</h3>
+                                    <ul class="socialNetwork">
+                                        <li><a href="#" class="tips" title="follow me on Facebook"><i class="icon-glyph-320 iconRounded"></i></a></li>
+                                        <li><a href="https://twitter.com/LIttleNeko1" class="tips" title="follow me on Twitter" target="_blank"><i class="icon-glyph-339 iconRounded"></i></a></li>
+                                        <li><a href="#" class="tips" title="follow me on Google+"><i class="icon-glyph-317 iconRounded"></i></a></li>
+                                        <li><a href="#" class="tips" title="follow me on Linkedin"><i class="icon-glyph-308 iconRounded"></i></a></li>
+                                        <li><a href="#" class="tips" title="follow me on Dribble"><i class="icon-glyph-325 iconRounded"></i></a></li>
+                                    </ul>     
+
+                                </div>
+                            </div> -->
+
+                        </div>
+                    </div>
+                </section>
+            </footer>
+            <section  id="footerRights">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 text-center">
+                            <p>Copyright © 2016 <a href="../index.html" target="blank">RB Engineering</a> / All rights reserved.</p>
+                        </div>
+
+                    </div>
                 </div>
-            </div>
-        </footer>
-        <!-- / footer -->
+            </section>
+            <!-- / footer -->
+
     </div>
     <!-- global wrapper -->
 <!-- End Document 
