conveyor, warehouse structure, machining, tanks and hopers pages finished

--- a/index.html
+++ b/index.html
@@ -325,10 +325,18 @@
 							<figcaption class="mediaHover">
 
 								<div class="iconLinks"> 
+
 									<a href="images/portfolio/rb-promo-1.jpg" class="image-link" title="Full width image">
 										<i class="icon-glyph-16 iconRounded"></i>
 									</a> 
+
+									<a href="portfolio-machining.html" class="sizer portfolioSheet" title="Learn More">
+										<i class="ion-plus-circled iconRounded"></i>
+									</a> 
+
 								</div>
+								<h3>Click <a href="portfolio-machining.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
+
 								<h3>Machined Die</h3>
 							</figcaption>
 						</figure>
@@ -350,6 +358,7 @@
 									</a> 
 								</div>
 								<h3>Click <a href="portfolio-scanning.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
+								<h3>FARO 3D Laser Scanner</h3>
 							</figcaption>
 						</figure>
 					</article>
@@ -360,11 +369,18 @@
 							<figcaption class="mediaHover">
 
 								<div class="iconLinks"> 
+
 									<a href="images/portfolio/rb-promo-4.jpg" class="image-link" title="Full width image">
 										<i class="icon-glyph-16 iconRounded"></i>
 									</a> 
+
+									<a href="portfolio-conveyors.html" class="sizer portfolioSheet" title="Learn More">
+										<i class="ion-plus-circled iconRounded"></i>
+									</a> 
+
 								</div>
-								<h3>Conveyor</h3>
+								<h3>Click <a href="portfolio-conveyors.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
+								<h3>Conveyors</h3>
 							</figcaption>
 						</figure>
 					</article>
@@ -375,10 +391,18 @@
 							<figcaption class="mediaHover">
 
 								<div class="iconLinks"> 
+
 									<a href="images/portfolio/rb-promo-2.jpg" class="image-link" title="Full width image">
 										<i class="icon-glyph-16 iconRounded"></i>
 									</a> 
+
+									<a href="portfolio-machining.html" class="sizer portfolioSheet" title="Learn More">
+										<i class="ion-plus-circled iconRounded"></i>
+									</a> 
+
 								</div>
+								<h3>Click <a href="portfolio-machining.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
+
 								<h3>Machined Die</h3>
 							</figcaption>
 						</figure>
@@ -390,10 +414,17 @@
 							<figcaption class="mediaHover">
 
 								<div class="iconLinks"> 
+
 									<a href="images/portfolio/rb-promo-5.jpg" class="image-link" title="Full width image">
 										<i class="icon-glyph-16 iconRounded"></i>
 									</a> 
+
+									<a href="portfolio-tanks.html" class="sizer portfolioSheet" title="Learn More">
+										<i class="ion-plus-circled iconRounded"></i>
+									</a> 
+
 								</div>
+								<h3>Click <a href="portfolio-tanks.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
 								<h3>Transistion</h3>
 							</figcaption>
 						</figure>
@@ -435,10 +466,17 @@
 							<figcaption class="mediaHover">
 
 								<div class="iconLinks"> 
+								
 									<a href="images/portfolio/rb-promo-8.jpg" class="image-link" title="Full width image">
 										<i class="icon-glyph-16 iconRounded"></i>
 									</a> 
+
+									<a href="portfolio-tanks.html" class="sizer portfolioSheet" title="Learn More">
+										<i class="ion-plus-circled iconRounded"></i>
+									</a> 
+
 								</div>
+								<h3>Click <a href="portfolio-tanks.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
 								<h3>Hopper</h3>
 							</figcaption>
 						</figure>
@@ -450,11 +488,18 @@
 							<figcaption class="mediaHover">
 
 								<div class="iconLinks"> 
+
 									<a href="images/portfolio/rb-promo-9.jpg" class="image-link" title="Full width image">
 										<i class="icon-glyph-16 iconRounded"></i>
 									</a> 
+
+									<a href="portfolio-conveyors.html" class="sizer portfolioSheet" title="Learn More">
+										<i class="ion-plus-circled iconRounded"></i>
+									</a> 
+
 								</div>
-								<h3>Incline Conveyor</h3>
+								<h3>Click <a href="portfolio-conveyors.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
+								<h3>Conveyors</h3>
 							</figcaption>
 						</figure>
 					</article>
@@ -465,11 +510,18 @@
 							<figcaption class="mediaHover">
 
 								<div class="iconLinks"> 
+
 									<a href="images/portfolio/rb-promo-3.jpg" class="image-link" title="Full width image">
 										<i class="icon-glyph-16 iconRounded"></i>
 									</a> 
+
+									<a href="portfolio-furniture.html" class="sizer portfolioSheet" title="Learn More">
+										<i class="ion-plus-circled iconRounded"></i>
+									</a> 
+
 								</div>
-								<h3>Stair Set</h3>
+								<h3>Click <a href="portfolio-conveyors.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
+								<h3>Warehouse Structures</h3>
 							</figcaption>
 						</figure>
 					</article>
